{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 832,
  "lineage": "dc8905a5-a88d-4a65-b08d-8b3a535d89d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "vpctargetgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:948422134115:targetgroup/vpctargetgroup/b33bcd7979c349c2",
            "arn_suffix": "targetgroup/vpctargetgroup/b33bcd7979c349c2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,202",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:948422134115:targetgroup/vpctargetgroup/b33bcd7979c349c2",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "vpctargetgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dbd61de5ac20f589"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myeip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00fcc784f1485c4a8",
            "domain": "vpc",
            "id": "eipalloc-00fcc784f1485c4a8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-199-41-19.compute-1.amazonaws.com",
            "public_ip": "44.199.41.19",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igwe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948422134115:internet-gateway/igw-017241d750d9b7817",
            "id": "igw-017241d750d9b7817",
            "owner_id": "948422134115",
            "tags": {
              "Name": "igwe"
            },
            "tags_all": {
              "Name": "igwe"
            },
            "vpc_id": "vpc-0dbd61de5ac20f589"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "albal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:948422134115:loadbalancer/app/albal/95bc365aff2be438",
            "arn_suffix": "app/albal/95bc365aff2be438",
            "dns_name": "albal-1931292020.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:948422134115:loadbalancer/app/albal/95bc365aff2be438",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "albal",
            "security_groups": [
              "sg-0a3a0c4fcf2dd82e5",
              "sg-0c8b6f81db877125e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-084f9e75b52a0cdc8"
              },
              {
                "subnet_id": "subnet-0e57b6af8f6b123ae"
              }
            ],
            "subnets": [
              "subnet-084f9e75b52a0cdc8",
              "subnet-0e57b6af8f6b123ae"
            ],
            "tags": {
              "Environment": "prod"
            },
            "tags_all": {
              "Environment": "prod"
            },
            "vpc_id": "vpc-0dbd61de5ac20f589",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.albsg2",
            "aws_security_group.sg1",
            "aws_subnet.pubsub1",
            "aws_subnet.pubsub2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgwe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00fcc784f1485c4a8",
            "connectivity_type": "public",
            "id": "nat-0f957a89154b55a19",
            "network_interface_id": "eni-0080dc6fa51e009d0",
            "private_ip": "112.0.1.39",
            "public_ip": "44.199.41.19",
            "subnet_id": "subnet-0e57b6af8f6b123ae",
            "tags": {
              "Name": "natgwe"
            },
            "tags_all": {
              "Name": "natgwe"
            }
          },
          "dependencies": [
            "aws_eip.myeip",
            "aws_internet_gateway.igwe",
            "aws_subnet.pubsub1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "prirou",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01f917c043f63e48c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f957a89154b55a19",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01f917c043f63e48c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.myeip",
            "aws_internet_gateway.igwe",
            "aws_nat_gateway.natgwe",
            "aws_route_table.prirt",
            "aws_subnet.pubsub1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "publicrou",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-017241d750d9b7817",
            "id": "r-rtb-052065665b5e8b0001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-052065665b5e8b000",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igwe",
            "aws_route_table.publicrt",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prirt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948422134115:route-table/rtb-01f917c043f63e48c",
            "id": "rtb-01f917c043f63e48c",
            "owner_id": "948422134115",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prirt"
            },
            "tags_all": {
              "Name": "prirt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbd61de5ac20f589"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948422134115:route-table/rtb-052065665b5e8b000",
            "id": "rtb-052065665b5e8b000",
            "owner_id": "948422134115",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "publicrt"
            },
            "tags_all": {
              "Name": "publicrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbd61de5ac20f589"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "u",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0489be19d82abd652",
            "route_table_id": "rtb-052065665b5e8b000",
            "subnet_id": "subnet-0e57b6af8f6b123ae"
          },
          "dependencies": [
            "aws_route_table.publicrt",
            "aws_subnet.pubsub1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "v",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e1aa3cdfd4a920c",
            "route_table_id": "rtb-052065665b5e8b000",
            "subnet_id": "subnet-084f9e75b52a0cdc8"
          },
          "dependencies": [
            "aws_route_table.publicrt",
            "aws_subnet.pubsub2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "albsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948422134115:security-group/sg-0c8b6f81db877125e",
            "description": "enable HTTP access on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8b6f81db877125e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "enable access to HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "albsg2",
            "name_prefix": "",
            "owner_id": "948422134115",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "albsg2"
            },
            "tags_all": {
              "Name": "albsg2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbd61de5ac20f589"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948422134115:security-group/sg-0a3a0c4fcf2dd82e5",
            "description": "Allow SSH/ HTTP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3a0c4fcf2dd82e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg1",
            "name_prefix": "",
            "owner_id": "948422134115",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dbd61de5ac20f589"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948422134115:subnet/subnet-0f3e520a7d9bb5450",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "112.0.3.0/24",
            "id": "subnet-0f3e520a7d9bb5450",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "948422134115",
            "tags": {
              "Name": "prisub1"
            },
            "tags_all": {
              "Name": "prisub1"
            },
            "vpc_id": "vpc-0dbd61de5ac20f589"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948422134115:subnet/subnet-0830acc8856f07391",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "112.0.4.0/24",
            "id": "subnet-0830acc8856f07391",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "948422134115",
            "tags": {
              "Name": "prisub2"
            },
            "tags_all": {
              "Name": "prisub2"
            },
            "vpc_id": "vpc-0dbd61de5ac20f589"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948422134115:subnet/subnet-0e57b6af8f6b123ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "112.0.1.0/24",
            "id": "subnet-0e57b6af8f6b123ae",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "948422134115",
            "tags": {
              "Name": "pubsub1"
            },
            "tags_all": {
              "Name": "pubsub1"
            },
            "vpc_id": "vpc-0dbd61de5ac20f589"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948422134115:subnet/subnet-084f9e75b52a0cdc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "112.0.2.0/24",
            "id": "subnet-084f9e75b52a0cdc8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "948422134115",
            "tags": {
              "Name": "pubsub2"
            },
            "tags_all": {
              "Name": "pubsub2"
            },
            "vpc_id": "vpc-0dbd61de5ac20f589"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948422134115:vpc/vpc-0dbd61de5ac20f589",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "112.0.0.0/16",
            "default_network_acl_id": "acl-03a0666e1eaf738ea",
            "default_route_table_id": "rtb-083428c977f1fa784",
            "default_security_group_id": "sg-0aec11ccd398e3b15",
            "dhcp_options_id": "dopt-73607209",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dbd61de5ac20f589",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-083428c977f1fa784",
            "owner_id": "948422134115",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948422134115:vpc-endpoint/vpce-0366f124b7f9a54c3",
            "dns_entry": [
              {
                "dns_name": "vpce-0366f124b7f9a54c3-wlpa0qbn.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0366f124b7f9a54c3-wlpa0qbn-us-east-1b.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0366f124b7f9a54c3-wlpa0qbn-us-east-1a.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08115413UXF9YU1XL8Y9"
              }
            ],
            "id": "vpce-0366f124b7f9a54c3",
            "network_interface_ids": [
              "eni-0b1faa9d61b6306d2",
              "eni-0bcd2509c8afb1530"
            ],
            "owner_id": "948422134115",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a3a0c4fcf2dd82e5"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2",
            "state": "available",
            "subnet_ids": [
              "subnet-0830acc8856f07391",
              "subnet-0f3e520a7d9bb5450"
            ],
            "tags": {
              "Name": "interface_ec2"
            },
            "tags_all": {
              "Name": "interface_ec2"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dbd61de5ac20f589"
          },
          "dependencies": [
            "aws_security_group.sg1",
            "aws_subnet.prisub1",
            "aws_subnet.prisub2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface_ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948422134115:vpc-endpoint/vpce-04db18399cc84a251",
            "dns_entry": [
              {
                "dns_name": "vpce-04db18399cc84a251-pfj3xdhq.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04db18399cc84a251-pfj3xdhq-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04db18399cc84a251-pfj3xdhq-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07501871W70H2B1GHKBX"
              }
            ],
            "id": "vpce-04db18399cc84a251",
            "network_interface_ids": [
              "eni-093c1b6b0c3a6f595",
              "eni-0e49c713294b32a70"
            ],
            "owner_id": "948422134115",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a3a0c4fcf2dd82e5"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-0830acc8856f07391",
              "subnet-0f3e520a7d9bb5450"
            ],
            "tags": {
              "Name": "interface_ec2messages"
            },
            "tags_all": {
              "Name": "interface_ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dbd61de5ac20f589"
          },
          "dependencies": [
            "aws_security_group.sg1",
            "aws_subnet.prisub1",
            "aws_subnet.prisub2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface_ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948422134115:vpc-endpoint/vpce-0e360a59a3ecfb358",
            "dns_entry": [
              {
                "dns_name": "vpce-0e360a59a3ecfb358-wfsasurc.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e360a59a3ecfb358-wfsasurc-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e360a59a3ecfb358-wfsasurc-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08667293L3RRJSO69IF7"
              }
            ],
            "id": "vpce-0e360a59a3ecfb358",
            "network_interface_ids": [
              "eni-038819aebe2f60d5d",
              "eni-0d9a4c177bfca026d"
            ],
            "owner_id": "948422134115",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a3a0c4fcf2dd82e5"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-0830acc8856f07391",
              "subnet-0f3e520a7d9bb5450"
            ],
            "tags": {
              "Name": "interface_ssm"
            },
            "tags_all": {
              "Name": "interface_ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dbd61de5ac20f589"
          },
          "dependencies": [
            "aws_security_group.sg1",
            "aws_subnet.prisub1",
            "aws_subnet.prisub2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface_ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948422134115:vpc-endpoint/vpce-0a278c926a58ab7b8",
            "dns_entry": [
              {
                "dns_name": "vpce-0a278c926a58ab7b8-9lct216a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a278c926a58ab7b8-9lct216a-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a278c926a58ab7b8-9lct216a-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0812001ZMPMGSJDVY8W"
              }
            ],
            "id": "vpce-0a278c926a58ab7b8",
            "network_interface_ids": [
              "eni-0377126d818c06ae3",
              "eni-03d874316d040ca80"
            ],
            "owner_id": "948422134115",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a3a0c4fcf2dd82e5"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-0830acc8856f07391",
              "subnet-0f3e520a7d9bb5450"
            ],
            "tags": {
              "Name": "interface_ssmmessages"
            },
            "tags_all": {
              "Name": "interface_ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dbd61de5ac20f589"
          },
          "dependencies": [
            "aws_security_group.sg1",
            "aws_subnet.prisub1",
            "aws_subnet.prisub2",
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}